<resources>
    <string name="app_name">Desafio Firabase</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="remember">Remember</string>
    <string name="create_account">Create account</string>
    <string name="nome">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="save_game">Save Game</string>
    <string name="description">Description</string>
    <string name="created_at">Created at</string>
    <string name="enail_vazio">Preencha sua senha</string>
    <string name="email_vazio">Preencha seu email</string>
    <string name="password_vazio">Preencha sua senha</string>
    <string name="password_warn_equals">Senhas não são iguais</string>
    <string name="password_warning_caracteres">Senha tem que ter no minimo 6 caracteres</string>
    <string name="email_warning_empty">O campo email não pode estar vazio</string>
    <string name="name_warning_empty">O campo nome não pode estar vazio</string>
</resources>