<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen"
    tools:context=".auth.login.LoginActivity">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="@dimen/dimen_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_6"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundColor="@color/color_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/dimen_text_18" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/color_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/dimen_text_18" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxRemember"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/remember"
                android:textColor="@color/text_color_check"
                android:textSize="@dimen/dimen_text_20" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32"
                android:backgroundTint="@color/colorAccent"
                android:padding="@dimen/dimen_10"
                android:text="@string/log_in"
                android:textSize="@dimen/dimen_text_18" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateAccount"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/textButton"
                android:textSize="@dimen/dimen_text_16" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>